HTML de index y productRubro

--- a/cloverbazar/views/index.ejs
+++ b/cloverbazar/views/index.ejs
@@ -3,10 +3,77 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clover Bazar</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <title>Document</title>
 </head>
 <body>
-  
+  <main>
+    <section class="carrusel">
+      <a href="">
+        <img src="" alt="">
+      </a>
+    </section>
+    <section class="secciones">
+
+      <article>
+        <a href="">
+          <img src="" alt="destacados">
+          <p>Destacados</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="ofertas">
+          <p>Ofertas</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="lineaproductos">
+          <p>Linea de productos</p>
+        </a>
+      </article>
+      <article>
+        <a href="">
+          <img src="" alt="Combos">
+          <p>Combos</p>
+        </a>
+      </article>
+    </section>
+    <section class="productos">
+      <article class="Producto1">
+        <a href="">
+          <img src="" alt="Producto1">
+          <p>Producto1</p>
+        </a>
+        <article class="Producto2">
+          <a href="">
+            <img src="" alt="Producto2">
+            <p>Producto2</p>
+          </a>
+        </article>
+        <article class="Producto3">
+          <a href="">
+            <img src="" alt="Producto3">
+            <p>Producto3</p>
+          </a>
+        </article>
+        <article class="Producto4">
+          <a href="">
+            <img src="" alt="Producto4">
+            <p>Producto4</p>
+          </a>
+    </section>
+    <section class="formulario">
+      <form action="">
+        <label for="Asunto">
+          Escribinos!
+        </label>
+        <input type="text" id="Asunto" placeholder="Asunto"> 
+        <input type="email" placeholder="Email"> 
+        <textarea name="Mensaje" id="Mensaje" cols="30" rows="10" placeholder="Tu Mensaje"></textarea>
+        <button type="submit">Enviar</button>
+      </form>
+    </section>
+  </main>
 </body>
 </html>
