agregue imagenes demo

--- a/cloverbazar/views/index.ejs
+++ b/cloverbazar/views/index.ejs
@@ -9,32 +9,32 @@
   <main>
     <section class="carrusel">
       <a href="">
-        <img src="" alt="">
+        <img src="/images/imagentipo.png" alt="">
       </a>
     </section>
     <section class="secciones">
 
       <article>
         <a href="">
-          <img src="" alt="destacados">
+          <img src="/images/imagentipo.png" alt="destacados">
           <p>Destacados</p>
         </a>
       </article>
       <article>
         <a href="">
-          <img src="" alt="ofertas">
+          <img src="/images/imagentipo.png" alt="ofertas">
           <p>Ofertas</p>
         </a>
       </article>
       <article>
         <a href="">
-          <img src="" alt="lineaproductos">
+          <img src="/images/imagentipo.png" alt="lineaproductos">
           <p>Linea de productos</p>
         </a>
       </article>
       <article>
         <a href="">
-          <img src="" alt="Combos">
+          <img src="/images/imagentipo.png" alt="Combos">
           <p>Combos</p>
         </a>
       </article>
@@ -42,24 +42,24 @@
     <section class="productos">
       <article class="Producto1">
         <a href="">
-          <img src="" alt="Producto1">
+          <img src="/images/imagentipo.png" alt="Producto1">
           <p>Producto1</p>
         </a>
         <article class="Producto2">
           <a href="">
-            <img src="" alt="Producto2">
+            <img src="/images/imagentipo.png" alt="Producto2">
             <p>Producto2</p>
           </a>
         </article>
         <article class="Producto3">
           <a href="">
-            <img src="" alt="Producto3">
+            <img src="/images/imagentipo.png" alt="Producto3">
             <p>Producto3</p>
           </a>
         </article>
         <article class="Producto4">
           <a href="">
-            <img src="" alt="Producto4">
+            <img src="/images/imagentipo.png" alt="Producto4">
             <p>Producto4</p>
           </a>
     </section>
