--- a/cloverbazar/views/productRubro.ejs
+++ b/cloverbazar/views/productRubro.ejs
@@ -10,25 +10,25 @@
         <section class="rubros">
             <article class="mates">
                 <a href="">
-                    <img src="" alt="">
+                    <img src="/images/imagentipo.png" alt="">
                     <p>Mates</p>
                 </a>
             </article>
             <article class="Vasos">
                 <a href="">
-                    <img src="" alt="">
+                    <img src="/images/imagentipo.png" alt="">
                     <p>Vasos</p>
                 </a>
             </article>
             <article class="Bowls">
                 <a href="">
-                    <img src="" alt="">
+                    <img src="/images/imagentipo.png" alt="">
                     <p>Bowls</p>
                 </a>
             </article>
             <article class="Varios">
                 <a href="">
-                    <img src="" alt="">
+                    <img src="/images/imagentipo.png" alt="">
                     <p>Varios</p>
 
                 </a>
