cambio a h3 de rubros

--- a/cloverbazar/views/productRubro.ejs
+++ b/cloverbazar/views/productRubro.ejs
@@ -8,28 +8,28 @@
 <body>
     <main>
         <section class="rubros">
-            <article class="mates">
+            <article class="tarjeta-rubro">
                 <a href="">
                     <img src="/images/imagentipo.png" alt="">
-                    <p>Mates</p>
+                    <h3>Mates</h3>
                 </a>
             </article>
-            <article class="Vasos">
+            <article class="tarjeta-rubro">
                 <a href="">
                     <img src="/images/imagentipo.png" alt="">
-                    <p>Vasos</p>
+                    <h3>Vasos</h3>
                 </a>
             </article>
-            <article class="Bowls">
+            <article class="tarjeta-rubro">
                 <a href="">
                     <img src="/images/imagentipo.png" alt="">
-                    <p>Bowls</p>
+                    <h3>Bowls</h3>
                 </a>
             </article>
-            <article class="Varios">
+            <article class="tarjeta-rubro">
                 <a href="">
                     <img src="/images/imagentipo.png" alt="">
-                    <p>Varios</p>
+                    <h3>Varios</h3>
 
                 </a>
             </article>
