--- a/cloverbazar/views/header.ejs
+++ b/cloverbazar/views/header.ejs
@@ -8,13 +8,15 @@
 </head>
 <body>
     <header>
-        <div>
-            <div class="cart"><i class="fas fa-shopping-cart"></i></div>
+        <div class="barra1">
+            <div class="cart">
+                <i class="fas fa-shopping-cart"></i>
+            </div>
             <div class="loginButton">
                 <button>Log In</button>
             </div>
         </div>
-        <div>
+        <div class="barra2">
             <div class="logo"><img src="/images/logo-clover.png" alt="logo clover"></div>
             <div class="search"><i class="fas fa-search"></i></div>
             <nav class="menu">
