--- a/cloverbazar/views/index.ejs
+++ b/cloverbazar/views/index.ejs
@@ -6,36 +6,68 @@
   <title>Document</title>
 </head>
 <body>
+  <header>
+    <div class="barra1">
+        <div class="cart">
+            <i class="fas fa-shopping-cart"></i>
+        </div>
+        <div class="loginButton">
+            <button>Log In</button>
+        </div>
+    </div>
+    <div class="barra2">
+        <div class="logo"><img src="/images/logo-clover.png" alt="logo clover"></div>
+        <div class="search"><i class="fas fa-search"></i></div>
+        <nav class="menu">
+            <i class="fas fa-bars"></i>
+            <ul>
+                <a href="/productRubro">
+                    <li>Productos</li>
+                </a>
+                <a href="/contacto">
+                    <li>Contacto</li>
+                </a>
+                <a href="/mayorista">
+                    <li>Mayorista</li>
+                </a>
+                <a href="/faqs">
+                    <li>FAQs</li>
+                </a>
+            </ul>
+        </nav>
+    </div>
+  </header>
   <main>
     <section class="carrusel">
       <a href="">
         <img src="/images/imagentipo.png" alt="">
+        <h1>Tu bazar online</h1>
       </a>
+
     </section>
     <section class="secciones">
-
       <article>
         <a href="">
           <img src="/images/imagentipo.png" alt="destacados">
-          <p>Destacados</p>
+          <h3>Destacados</h3>
         </a>
       </article>
       <article>
         <a href="">
           <img src="/images/imagentipo.png" alt="ofertas">
-          <p>Ofertas</p>
+          <h3>Ofertas</h3>
         </a>
       </article>
       <article>
         <a href="">
           <img src="/images/imagentipo.png" alt="lineaproductos">
-          <p>Linea de productos</p>
+          <h3>Linea de productos</h3>
         </a>
       </article>
       <article>
         <a href="">
           <img src="/images/imagentipo.png" alt="Combos">
-          <p>Combos</p>
+          <h3>Combos</h3>
         </a>
       </article>
     </section>
@@ -43,24 +75,24 @@
       <article class="Producto1">
         <a href="">
           <img src="/images/imagentipo.png" alt="Producto1">
-          <p>Producto1</p>
+          <h3>Producto1</h3>
         </a>
         <article class="Producto2">
           <a href="">
             <img src="/images/imagentipo.png" alt="Producto2">
-            <p>Producto2</p>
+            <h3>Producto2</h3>
           </a>
         </article>
         <article class="Producto3">
           <a href="">
             <img src="/images/imagentipo.png" alt="Producto3">
-            <p>Producto3</p>
+            <h3></p>Producto3</h3>
           </a>
         </article>
         <article class="Producto4">
           <a href="">
             <img src="/images/imagentipo.png" alt="Producto4">
-            <p>Producto4</p>
+            <h3>Producto4</h3>
           </a>
     </section>
     <section class="formulario">
@@ -75,5 +107,18 @@
       </form>
     </section>
   </main>
+  <footer>
+    <div class="info">
+        <a href=""> <p>FAQs</p> </a>
+        <a href=""> <p>Tel</p> </a>
+        <a href="mailto:ventascloverbazar@gmail.com"> <p>Email</p> </a>
+        <a href=""> <p>Ubicacion</p> </a>
+    </div>
+    <div class="iconos">
+        <a href="https://www.instagram.com/cloverbazaryhome">Instagram</a>
+        <a href="https://www.facebook.com/cloverbazaryhome">Facebook</a>
+        <a href="https://wa.me/5491128056500">Whatsapp</a>
+    </div>
+</footer>
 </body>
 </html>
