--- a/cloverbazar/views/footer.ejs
+++ b/cloverbazar/views/footer.ejs
@@ -1,13 +1,13 @@
 <footer>
     <div class="info">
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <a href=""> <p>FAQs</p> </a>
+        <a href=""> <p>Tel</p> </a>
+        <a href="mailto:ventascloverbazar@gmail.com"> <p>Email</p> </a>
+        <a href=""> <p>Ubicacion</p> </a>
     </div>
     <div class="iconos">
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
+        <a href="https://www.instagram.com/cloverbazaryhome">Instagram</a>
+        <a href="https://www.facebook.com/cloverbazaryhome">Facebook</a>
+        <a href="https://wa.me/5491128056500">Whatsapp</a>
     </div>
 </footer>
