--- a/cloverbazar/views/product.ejs
+++ b/cloverbazar/views/product.ejs
@@ -4,31 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mates</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 </head>
 <body>
     <header>
-
+        <div class="barra1">
+            <div class="cart">
+                <i class="fas fa-shopping-cart"></i>
+            </div>
+            <div class="loginButton">
+                <button>Log In</button>
+            </div>
+        </div>
+        <div class="barra2">
+            <div class="logo"><img src="/images/logo-clover.png" alt="logo clover"></div>
+            <div class="search"><i class="fas fa-search"></i></div>
+            <nav class="menu">
+                <i class="fas fa-bars"></i>
+                <ul>
+                    <a href="/productRubro">
+                        <li>Productos</li>
+                    </a>
+                    <a href="/contacto">
+                        <li>Contacto</li>
+                    </a>
+                    <a href="/mayorista">
+                        <li>Mayorista</li>
+                    </a>
+                    <a href="/faqs">
+                        <li>FAQs</li>
+                    </a>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <div>
+        <article>
             <a href="/productDetail"> <img src="/images/imagentipo.png" alt="">
-            <h4>Mate1   $$$$</h4> </a>
-        </div>
-        <div>
+            <h3>Mate1   $$$$</h3> </a>
+        </article>
+        <article>
             <a href="/productDetail"> <img src="/images/imagentipo.png" alt="">
-            <h4>Mate2   $$$$</h4> </a>
-        </div>
-        <div>
+            <h3> Mate2   $$$$</h3> </a>
+        </article>
+        <article>
             <a href="/productDetail"> <img src="/images/imagentipo.png" alt="">
-            <h4>Mate3   $$$$</h4> </a>
-        </div>
-        <div>
+            <h3>Mate3   $$$$</h3> </a>
+        </article>
+        <article>
             <a href="/productDetail"> <img src="/images/imagentipo.png" alt="">
-            <h4>Mate4   $$$$</h4> </a>
-        </div>
+            <h3>Mate4   $$$$</h3> </a>
+        </article>
     </main>
     <footer>
-
+        <div class="info">
+            <a href=""> <p>FAQs</p> </a>
+            <a href=""> <p>Tel</p> </a>
+            <a href="mailto:ventascloverbazar@gmail.com"> <p>Email</p> </a>
+            <a href=""> <p>Ubicacion</p> </a>
+        </div>
+        <div class="iconos">
+            <a href="https://www.instagram.com/cloverbazaryhome">Instagram</a>
+            <a href="https://www.facebook.com/cloverbazaryhome">Facebook</a>
+            <a href="https://wa.me/5491128056500">Whatsapp</a>
+        </div>
     </footer>
 </body>
 </html>
