--- a/cloverbazar/views/index.ejs
+++ b/cloverbazar/views/index.ejs
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesheets/header.css">
+  <link rel="stylesheet" href="/stylesheets/index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 
 
@@ -45,10 +47,11 @@
     <section class="carrusel">
       <a href="">
         <img src="/images/imagentipo.png" alt="">
-        <h1>Tu bazar online</h1>
+        <h1>-Tu bazar online-</h1>
       </a>
 
     </section>
+    <h2>Secciónes</h2>
     <section class="secciones">
       <article>
         <a href="">
@@ -75,13 +78,15 @@
         </a>
       </article>
     </section>
+    <h2>Productos</h2>
     <section class="productos">
       <article class="Producto1">
         <a href="">
           <img src="/images/imagentipo.png" alt="Producto1">
           <h3>Producto1</h3>
         </a>
-        <article class="Producto2">
+      </article>
+      <article class="Producto2">
           <a href="">
             <img src="/images/imagentipo.png" alt="Producto2">
             <h3>Producto2</h3>
@@ -98,6 +103,7 @@
             <img src="/images/imagentipo.png" alt="Producto4">
             <h3>Producto4</h3>
           </a>
+        </article>
     </section>
     <section class="formulario">
       <form action="">
@@ -106,7 +112,7 @@
         </label>
         <input type="text" id="Asunto" placeholder="Asunto"> 
         <input type="email" placeholder="Email"> 
-        <textarea name="Mensaje" id="Mensaje" cols="30" rows="10" placeholder="Tu Mensaje"></textarea>
+        <textarea name="Mensaje" id="Mensaje" cols="30" rows="10" placeholder="Tu mensaje"></textarea>
         <button type="submit">Enviar</button>
       </form>
     </section>
