Agregue estilos de forms

--- a/cloverbazar/views/productCart.ejs
+++ b/cloverbazar/views/productCart.ejs
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="/stylesheets/forms.css">
+    <link rel="stylesheet" href="/stylesheets/header.css">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -40,25 +42,25 @@
         </div>
     </header>
     <main>
-        <h2>Mi Compra</h2>
+        <h2>Tu Compra</h2>
         <form action="" method="post">
             <article>
                 <i class="fas fa-image"></i>
                 <p>Nombre producto</p>
                 <p>Cantidad</p>
-                <p>Precio</p>
+                <p>$$$$</p>
             </article>
             <article>
                 <i class="fas fa-image"></i>
                 <p>Nombre producto</p>
                 <p>Cantidad</p>
-                <p>Precio</p>
+                <p>$$$$</p>
             </article>
             <article>
                 <i class="fas fa-image"></i>
                 <p>Nombre producto</p>
                 <p>Cantidad</p>
-                <p>Precio</p>
+                <p>$$$$</p>
             </article>
             <article class="totalcompra">
                 <p>Total</p>
