--- a/cloverbazar/views/login.ejs
+++ b/cloverbazar/views/login.ejs
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheets/forms.css">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="/stylesheets/forms.css">
+    <link rel="stylesheet" href="/stylesheets/header.css">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -41,8 +45,8 @@
     <main>
         <h2>Iniciar sesión</h2>
         <form action="" method="POST">
-            <input type="email" placeholder="e-mail">
-            <input type="password" placeholder="contraseña">
+            <input type="email" placeholder="E-mail">
+            <input type="password" placeholder="Contraseña">
             <a href="/register">No tenes cuenta? Registrate</a>
             <button type="submit">Iniciar sesión</button>
         </form>
