--- a/cloverbazar/views/index.ejs
+++ b/cloverbazar/views/index.ejs
@@ -80,25 +80,25 @@
     </section>
     <h2>Productos</h2>
     <section class="productos">
-      <article class="Producto1">
+      <article class="producto">
         <a href="">
           <img src="/images/imagentipo.png" alt="Producto1">
           <h3>Producto1</h3>
         </a>
       </article>
-      <article class="Producto2">
+      <article class="producto">
           <a href="">
-            <img src="/images/imagentipo.png" alt="Producto2">
+            <img src="/images/imagentipo.png" alt="producto">
             <h3>Producto2</h3>
           </a>
         </article>
-        <article class="Producto3">
+        <article class="producto">
           <a href="">
-            <img src="/images/imagentipo.png" alt="Producto3">
-            <h3></p>Producto3</h3>
+            <img src="/images/imagentipo.png" alt="producto">
+            <h3>Producto3</h3>
           </a>
         </article>
-        <article class="Producto4">
+        <article class="producto">
           <a href="">
             <img src="/images/imagentipo.png" alt="Producto4">
             <h3>Producto4</h3>
