--- a/cloverbazar/views/product.ejs
+++ b/cloverbazar/views/product.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mates</title>
+    <link rel="stylesheet" href="/stylesheets/header.css">
+    <link rel="stylesheet" href="/stylesheets/product.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 </head>
 <body>
@@ -39,22 +41,33 @@
         </div>
     </header>
     <main>
-        <article>
-            <a href="/productDetail"> <img src="/images/imagentipo.png" alt="">
-            <h3>Mate1   $$$$</h3> </a>
-        </article>
-        <article>
-            <a href="/productDetail"> <img src="/images/imagentipo.png" alt="">
-            <h3> Mate2   $$$$</h3> </a>
-        </article>
-        <article>
-            <a href="/productDetail"> <img src="/images/imagentipo.png" alt="">
-            <h3>Mate3   $$$$</h3> </a>
-        </article>
-        <article>
-            <a href="/productDetail"> <img src="/images/imagentipo.png" alt="">
-            <h3>Mate4   $$$$</h3> </a>
-        </article>
+        <h2>Productos</h2>
+        <section>
+            <article>
+                <a href="/productDetail"> 
+                    <img src="/images/imagentipo.png" alt="">
+                    <h3>Mate1   $$$$</h3>
+                </a>
+            </article>
+            <article>
+                <a href="/productDetail">
+                    <img src="/images/imagentipo.png" alt="">
+                    <h3> Mate2   $$$$</h3> 
+                </a>
+            </article>
+            <article>
+                <a href="/productDetail"> 
+                    <img src="/images/imagentipo.png" alt="">
+                    <h3>Mate3   $$$$</h3> 
+                </a>
+            </article>
+            <article>
+                <a href="/productDetail">
+                    <img src="/images/imagentipo.png" alt="">
+                    <h3>Mate4   $$$$</h3> 
+                </a>
+            </article>
+    </section>
     </main>
     <footer>
         <div class="info">
