--- a/cloverbazar/views/login.ejs
+++ b/cloverbazar/views/login.ejs
@@ -21,10 +21,10 @@
             </div>
         </div>
         <div class="barra2">
-            <div class="logo"><img src="/images/logo-clover.png" alt="logo clover"></div>
+            <div class="logo"><img src="/images/logo.png" alt="logo clover"></div>
             <div class="search"><i class="fas fa-search"></i></div>
-            <nav class="menu">
-                <i class="fas fa-bars"></i>
+            <div class="menu"><i class="fas fa-bars"></i></div>
+            <nav>
                 <ul>
                     <a href="/productRubro">
                         <li>Productos</li>
@@ -44,7 +44,7 @@
     </header>
     <main>
         <h2>Iniciar sesión</h2>
-        <form action="" method="POST">
+        <form action="" method="POST" class="form-login">
             <input type="email" placeholder="E-mail">
             <input type="password" placeholder="Contraseña">
             <a href="/register">No tenes cuenta? Registrate</a>
@@ -52,16 +52,18 @@
         </form>
     </main>
     <footer>
-        <div class="info">
-            <a href=""> <p>FAQs</p> </a>
-            <a href=""> <p>Tel</p> </a>
-            <a href="mailto:ventascloverbazar@gmail.com"> <p>Email</p> </a>
-            <a href=""> <p>Ubicacion</p> </a>
-        </div>
-        <div class="iconos">
-            <a href="https://www.instagram.com/cloverbazaryhome">Instagram</a>
-            <a href="https://www.facebook.com/cloverbazaryhome">Facebook</a>
-            <a href="https://wa.me/5491128056500">Whatsapp</a>
+        <div class="foot">
+            <div class="info">
+                <a href="https://drive.google.com/file/d/1Goq5qZMuURyv0nDcaTWMlG4Z36-_CeNn/view?usp=sharing" target="_blank"> <p>FAQs</p> </a>
+                <a href="https://wa.me/5491128056500" target="_blank"> <p>+54 9 1128056500</p> </a>
+                <a href="mailto:ventascloverbazar@gmail.com" target="_blank"> <p>ventascloverbazar@gmail.com</p> </a>
+                <a href="https://goo.gl/maps/rX8ZoY3BKo2Xgcgp6" target="_blank"> <p>Villa Crespo, CABA</p> </a>
+            </div>
+            <div class="iconos">
+                <a href="https://wa.me/5491128056500" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.instagram.com/cloverbazaryhome" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/pg/Clover-Bazar-Home-112693650469227" target="_blank"><i class="fab fa-facebook"></i></a>
+            </div>
         </div>
     </footer>
 </body>
