correciones del css en index, product y productRubro

--- a/cloverbazar/public/stylesheets/index.css
+++ b/cloverbazar/public/stylesheets/index.css
@@ -45,10 +45,10 @@ width: 100%;
 }
 main section.secciones h3{
     position: relative;
-    bottom: 170px;
     font-weight: 400;
     color: rgb(46, 46, 46);
-    text-align: center;
+    text-align: left;
+    padding-left: 10px;
 
 }
 main section a{
@@ -65,17 +65,18 @@ main section.productos article{
 }
 main section.productos  h3{
     position: relative;
-    bottom: 100px;
     font-weight: 400;
     color: rgb(46, 46, 46);
-    text-align: center;
+    text-align: left;
+    padding-left: 10px;
 
 }
 
 main section form{
-    background-color: #faeded;
+    background-color: #fbdcc4;
     margin: 20px;
     padding: 10px;
+    text-align: center;
 }
 main section form label{
     text-align: center;
@@ -107,5 +108,6 @@ main section form button{
     margin: 5px 0;
     font-family: 'Libre Franklin', sans-serif;
     padding: 5px;
-    background-color: #fbdcc4;
+    color: #fbdcc4;
+    background-color: rgb(46, 46, 46);
 }
