--- a/cloverbazar/public/stylesheets/product.css
+++ b/cloverbazar/public/stylesheets/product.css
@@ -22,10 +22,9 @@ main section img{
     }
 main section h3{
         position: relative;
-        bottom: 170px;
         font-weight: 400;
         color: rgb(46, 46, 46);
-        text-align: center;
+        padding-left: 10px;
     
     }
 main section a{
