--- a/cloverbazar/public/stylesheets/header.css
+++ b/cloverbazar/public/stylesheets/header.css
@@ -24,6 +24,8 @@ header div.barra2{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: space-between;
+    width: 100%;
 } 
 header div.barra2 div.logo {
     width: 20%;
@@ -33,12 +35,15 @@ header div.barra2 div.logo img{
     width: 100%;
 }
 
-header div.barra2 div.search {
-    margin-left: 220px;
+header div.barra2 div.menuysearch {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end;
+    width: 70%;
 }
 
-header div.barra2 div.menu {
-    margin-left: 20px;
+header div.barra2 div.menuysearch div.search {
+    padding-right: 15px;
 }
 
 header div.barra2 nav ul{
@@ -65,8 +70,40 @@ footer {
 
 footer div.foot {
     display: flex;
-    align-items: center;
+    flex-flow: column wrap;
 }
+
+footer div.foot a i.fa-whatsapp {
+    font-size: 40px;
+    color: rgb(46, 46, 46);
+    padding: 0;
+    background-color: #4DCB5B;
+    border-radius: 100%;
+}
+
+footer div.foot a.whatsapp {
+    align-self: flex-end;
+    margin-right: 15px;
+    padding-top: 10px;
+    position: fixed;
+    bottom: 10px;
+}
+
+footer div.iconos a i{
+    color: rgb(46, 46, 46);
+    padding: 0;
+    font-size: 25px;
+}
+
+footer div.iconos {
+    display: flex;
+    width: 280px;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+    margin-left: 20px;
+ }
+
 
 footer div.info a {
     text-decoration: none;
@@ -77,16 +114,3 @@ footer div.info a {
 footer div.info {
     margin-left: 20px;
 }
-
-footer div.iconos i {
-    color: rgb(46, 46, 46);
-    height: 30px;
-    padding: 0;
-}
-
-footer div.iconos {
-    display: flex;
-    flex-direction: column;
-    margin-left: 90px;
-}
-
