--- a/cloverbazar/public/stylesheets/productDetail.css
+++ b/cloverbazar/public/stylesheets/productDetail.css
@@ -3,7 +3,11 @@ main {
 }
 
 main section article.image {
-    text-align: center;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 main section article.image img {
@@ -11,7 +15,8 @@ main section article.image img {
 }
 
 main section article.image h1 {
-    font-size: 30px;
+    font-size: 24px;
+    max-width: 80%;
 }
 
 main section.detalleprod div {
@@ -19,19 +24,19 @@ main section.detalleprod div {
 }
 
 main section.detalleprod div button {
-    width: 160px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    width: 170px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border: 0px;
     border-radius: 5px;
-    background-color: #fbdcc4;
-    color: rgb(46, 46, 46);
+    background-color:rgb(46, 46, 46);
+    color: #faeded;
 }
 
 main section article.detail {
-    margin-left: 15px;
-    margin-right: 15px;
     font-size: 18px;
+    margin-left: 10%;
+    max-width: 80%;
 }
 
 main section article.detail ul {
@@ -47,6 +52,14 @@ main section.relacionados {
     text-align: center;
 }
 
+main section.relacionados h2 {
+    font-size: 20px;
+}
+
 main section.relacionados img {
     width: 60%;
+}
+
+main section.relacionados h4 {
+    font-size: 14px;
 }
