--- a/cloverbazar/views/productDetail.ejs
+++ b/cloverbazar/views/productDetail.ejs
@@ -21,8 +21,10 @@
         </div>
         <div class="barra2">
             <div class="logo"><img src="/images/logo.png" alt="logo clover"></div>
-            <div class="search"><i class="fas fa-search"></i></div>
-            <div class="menu"><i class="fas fa-bars"></i></div>
+            <div class="menuysearch">
+                <div class="search"><i class="fas fa-search"></i></div>
+                <div class="menu"><i class="fas fa-bars"></i></div>
+            </div>
             <nav>
                 <ul>
                     <a href="/productRubro">
@@ -74,16 +76,18 @@
     </main>
     <footer>
         <div class="foot">
+            <a href="https://wa.me/5491128056500" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
+            <div class="iconos">
+                <h5>Seguinos en nuestras redes:</h5>
+                <a href="https://www.instagram.com/cloverbazaryhome" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/pg/Clover-Bazar-Home-112693650469227" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            </div>
             <div class="info">
-                <a href="https://drive.google.com/file/d/1Goq5qZMuURyv0nDcaTWMlG4Z36-_CeNn/view?usp=sharing" target="_blank"> <p>FAQs</p> </a>
-                <a href="https://wa.me/5491128056500" target="_blank"> <p>+54 9 1128056500</p> </a>
+                <h5>Contactanos:</h5>
+                <!-- <a href="https://drive.google.com/file/d/1Goq5qZMuURyv0nDcaTWMlG4Z36-_CeNn/view?usp=sharing" target="_blank"> <p>FAQs</p> </a> -->
+                <a href="https://wa.me/5491128056500" target="_blank"> <p>Tel: +54 9 1128056500</p> </a>
                 <a href="mailto:ventascloverbazar@gmail.com" target="_blank"> <p>ventascloverbazar@gmail.com</p> </a>
                 <a href="https://goo.gl/maps/rX8ZoY3BKo2Xgcgp6" target="_blank"> <p>Villa Crespo, CABA</p> </a>
-            </div>
-            <div class="iconos">
-                <a href="https://wa.me/5491128056500" target="_blank"><i class="fab fa-whatsapp"></i></a>
-                <a href="https://www.instagram.com/cloverbazaryhome" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/pg/Clover-Bazar-Home-112693650469227" target="_blank"><i class="fab fa-facebook"></i></a>
             </div>
         </div>
     </footer>
