--- a/cloverbazar/views/productCart.ejs
+++ b/cloverbazar/views/productCart.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <title>Document</title>
-    <link rel="stylesheet" href="/stylesheets/forms.css">
     <link rel="stylesheet" href="/stylesheets/header.css">
+    <link rel="stylesheet" href="/stylesheets/forms.css">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -66,7 +66,7 @@
                 <p>Total</p>
                 <p>$$$$</p>
             </article>
-            <button type="submit">Confirmar compra</button>
+            <button type="submit" class="confirmar-compra">Confirmar compra</button>
             <a href="/product">Seguir comprando</a>
         </form>
     </main>
