--- a/cloverbazar/views/productDetail.ejs
+++ b/cloverbazar/views/productDetail.ejs
@@ -77,8 +77,8 @@
     <footer>
         <div class="foot">
             <a href="https://wa.me/5491128056500" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
+            <h5 class="redes">Seguinos en nuestras redes:</h5>
             <div class="iconos">
-                <h5>Seguinos en nuestras redes:</h5>
                 <a href="https://www.instagram.com/cloverbazaryhome" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.facebook.com/pg/Clover-Bazar-Home-112693650469227" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </div>
