--- a/cloverbazar/views/productDetail.ejs
+++ b/cloverbazar/views/productDetail.ejs
@@ -76,7 +76,7 @@
     </main>
     <footer>
         <div class="foot">
-            <a href="https://wa.me/5491128056500" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://wa.me/5491128056500" target="_blank" class="whatsapp"><img src="/images/whatsapp1.png" alt="logo whatsapp"></a>
             <h5 class="redes">Seguinos en nuestras redes:</h5>
             <div class="iconos">
                 <a href="https://www.instagram.com/cloverbazaryhome" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -84,7 +84,6 @@
             </div>
             <div class="info">
                 <h5>Contactanos:</h5>
-                <!-- <a href="https://drive.google.com/file/d/1Goq5qZMuURyv0nDcaTWMlG4Z36-_CeNn/view?usp=sharing" target="_blank"> <p>FAQs</p> </a> -->
                 <a href="https://wa.me/5491128056500" target="_blank"> <p>Tel: +54 9 1128056500</p> </a>
                 <a href="mailto:ventascloverbazar@gmail.com" target="_blank"> <p>ventascloverbazar@gmail.com</p> </a>
                 <a href="https://goo.gl/maps/rX8ZoY3BKo2Xgcgp6" target="_blank"> <p>Villa Crespo, CABA</p> </a>
