responsive header y footer tablet

--- a/cloverbazar/public/stylesheets/header.css
+++ b/cloverbazar/public/stylesheets/header.css
@@ -40,6 +40,7 @@ header div.barra2 div.menuysearch {
     flex-flow: row wrap;
     justify-content: flex-end;
     width: 70%;
+    margin-right: 15px;
 }
 
 header div.barra2 div.menuysearch div.search {
@@ -117,4 +118,66 @@ footer div.info a {
 
 footer div.info {
     margin-left: 20px;
+}
+
+@media(min-width:768px) {
+    /*Cambios HEADER*/
+    header div.barra2 div.logo {
+        width: 90px;
+    }
+
+    header div.barra2 div.logo img{ 
+        width: 90px;
+    }
+    
+    header div.barra2 nav ul {
+        display: flex;
+        flex-flow: row wrap;
+        list-style: none;
+        width: 400px;
+        justify-content: space-between;
+        padding-left: 0;
+    }
+
+    header div.barra2 nav ul a {
+        text-decoration: none;
+        color: rgb(46, 46, 46);;
+    }
+
+    header div.barra2 div.menuysearch div.menu {
+        display: none;
+    }
+
+    header div.barra2 div.menuysearch {
+        width: 20px;
+        margin-right: 15px;
+
+    }
+    
+    header div.barra2 div.menuysearch div.search {
+        padding-right: 0;
+    }
+
+    /*Cambios FOOTER*/
+
+    footer div.foot a.whatsapp img {
+        width: 60px;
+    }
+
+    footer div.foot a.whatsapp {
+        margin-right: 10px;
+    }
+
+    footer div.foot div.infofooter {
+        display: flex;
+        flex-flow: row-reverse wrap;
+        justify-content: space-around;
+        width: 500px;
+    }
+
+    footer div.foot div.infofooter div.rrss {
+        display: flex;
+        flex-flow: column wrap;
+    }
+
 }
