--- a/cloverbazar/views/productDetail.ejs
+++ b/cloverbazar/views/productDetail.ejs
@@ -10,39 +10,7 @@
     <link rel="stylesheet" href="/stylesheets/productDetail.css">
 </head>
 <body>
-    <header>
-        <div class="barra1">
-            <div class="cart">
-                <i class="fas fa-shopping-cart"></i>
-            </div>
-            <div class="loginButton">
-                <button>Log In</button>
-            </div>
-        </div>
-        <div class="barra2">
-            <div class="logo"><img src="/images/logo.png" alt="logo clover"></div>
-            <div class="menuysearch">
-                <div class="search"><i class="fas fa-search"></i></div>
-                <div class="menu"><i class="fas fa-bars"></i></div>
-            </div>
-            <nav>
-                <ul>
-                    <a href="/productRubro">
-                        <li>Productos</li>
-                    </a>
-                    <a href="/contacto">
-                        <li>Contacto</li>
-                    </a>
-                    <a href="/mayorista">
-                        <li>Mayorista</li>
-                    </a>
-                    <a href="/faqs">
-                        <li>FAQs</li>
-                    </a>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <%-include('./partials/header')%>
     <main>
         <section class="detalleprod"> 
             <article class="image">
@@ -74,21 +42,6 @@
             </article>
         </section>
     </main>
-    <footer>
-        <div class="foot">
-            <a href="https://wa.me/5491128056500" target="_blank" class="whatsapp"><img src="/images/whatsapp1.png" alt="logo whatsapp"></a>
-            <h5 class="redes">Seguinos en nuestras redes:</h5>
-            <div class="iconos">
-                <a href="https://www.instagram.com/cloverbazaryhome" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/pg/Clover-Bazar-Home-112693650469227" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            </div>
-            <div class="info">
-                <h5>Contactanos:</h5>
-                <a href="https://wa.me/5491128056500" target="_blank"> <p>Tel: +54 9 1128056500</p> </a>
-                <a href="mailto:ventascloverbazar@gmail.com" target="_blank"> <p>ventascloverbazar@gmail.com</p> </a>
-                <a href="https://goo.gl/maps/rX8ZoY3BKo2Xgcgp6" target="_blank"> <p>Villa Crespo, CABA</p> </a>
-            </div>
-        </div>
-    </footer>
+    <%-include('./partials/footer')%>
 </body>
 </html>
