product detail responsive

--- a/cloverbazar/views/productDetail.ejs
+++ b/cloverbazar/views/productDetail.ejs
@@ -15,11 +15,11 @@
         <section class="detalleprod"> 
             <article class="image">
                 <img src="/images/imagentipo.png" alt="">
-                <h1>Nombre Producto  $$$$</h1>
+                <div>
+                    <h1>Nombre Producto  $$$$</h1>
+                    <button>Agregar al carrito</button>
+                </div>
             </article>
-            <div>
-                <button>Agregar al carrito</button>
-            </div>
             <article class="detail">
                 <p>Detalles del producto </p>
                 <ul>
@@ -30,8 +30,12 @@
                 </ul>
             </article>
         </section>
+        <h2 class="titulorel">Productos relacionados</h2>
         <section class="relacionados">
-                <h2>Productos relacionados</h2>
+            <article>
+                <img src="/images/imagentipo.png" alt="">
+                <h4>Producto    $$$$</h4>
+            </article>
             <article>
                 <img src="/images/imagentipo.png" alt="">
                 <h4>Producto    $$$$</h4>
