--- a/cloverbazar/public/stylesheets/productDetail.css
+++ b/cloverbazar/public/stylesheets/productDetail.css
@@ -2,9 +2,15 @@ main {
     padding-top: 25px;
 }
 
-main section article.image {
+main section.detalleprod {
     display: flex;
     flex-flow: column wrap;
+    align-items: center;
+}
+
+main section article.image {
+    display: flex;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -19,11 +25,11 @@ main section article.image h1 {
     max-width: 80%;
 }
 
-main section.detalleprod div {
+main section.detalleprod button {
     text-align: center;
 }
 
-main section.detalleprod div button {
+main section.detalleprod button {
     width: 170px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -33,10 +39,17 @@ main section.detalleprod div button {
     color: #faeded;
 }
 
+main section.detalleprod article.image div {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: 80%;
+}
+
 main section article.detail {
     font-size: 18px;
-    margin-left: 10%;
-    max-width: 80%;
+    width: 80%;
 }
 
 main section article.detail ul {
@@ -49,17 +62,38 @@ main section article.detail li {
 }
 
 main section.relacionados {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+main h2.titulorel {
+    font-size: 20px;
     text-align: center;
 }
 
-main section.relacionados h2 {
-    font-size: 20px;
-}
-
 main section.relacionados img {
-    width: 60%;
+    width: 220px;
 }
 
 main section.relacionados h4 {
     font-size: 14px;
+    text-align: center;
+}
+
+@media(min-width: 768px) {
+    main section article.image img {
+        width: 300px;
+        height: 300px;
+    }   
+
+    main section.detalleprod article.image div {
+        height: 300px;
+        width: 300px;
+        align-items: center;
+    }
+
+    main section.detalleprod article.detail {
+        width: 600px;
+    }
 }
